# Owlerlay

./: .mcp.json  .prettierrc.json  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: 001-persist-groups.md  002-persist-overlay-config.md  003-auto-reset.md  004-dashboard.md  005-countdown-icon-label.md  006-preview-per-group.md  007-preview-per-countdown.md  README.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  remote.rs  settings.rs
src-tauri/src/countdown/: commands.rs  dto.rs  events.rs  mod.rs  model.rs  service.rs  store.rs
src-tauri/src/overlay/: commands.rs  dto.rs  errors.rs  model.rs  service.rs
src-tauri/src/server/: mod.rs  remote.rs  routes.rs
src-tauri/templates/overlay/: browsersource.html.j2
src-tauri/templates/overlay/countdown/: countdown.css.j2  countdown.html.j2  countdown.js.j2
src-tauri/templates/remote/: remote.html
src-tauri/tests/: countdown_finish.rs  countdown_persist.rs  overlay_render.rs  overlay_service.rs  remote_settings.rs  time_format.rs
src/app/shell/: AppShell.svelte  EyePip.svelte  OwlMark.svelte  Roost.svelte  Stage.svelte  types.ts
src/app/styles/: base.css  countdown.css  tokens.css
src/features/countdown/api/: countdown.client.ts
src/features/countdown/components/: AppearancePanel.svelte  CountdownDetail.svelte  CountdownPage.svelte
src/features/remote/: RemoteSettings.svelte  remote.client.ts
src/shared/overlay/: origin.ts
src/shared/tauri/: invoke.ts
src/shared/time/: duration.ts
(+8 files in other folders)
